light_server node added into simulator pkg Changed rviz configuration into turtlebot.rviz

--- a/catkin_ws/src/simulator/CMakeLists.txt
+++ b/catkin_ws/src/simulator/CMakeLists.txt
@@ -241,6 +241,10 @@ add_executable(laser_node src/simulator_physics/laser_node.cpp)
 target_link_libraries(laser_node ${catkin_LIBRARIES})
 add_dependencies(laser_node simulator_generate_messages_cpp)
 
+add_executable(light_server src/simulator_physics/light_server.cpp)
+target_link_libraries(light_server ${catkin_LIBRARIES})
+add_dependencies(light_server simulator_generate_messages_cpp)
+
 add_executable(light_node src/simulator_physics/light_node.cpp)
 target_link_libraries(light_node ${catkin_LIBRARIES})
 add_dependencies(light_node simulator_generate_messages_cpp)
