--- a/catkin_ws/src/simulator/CMakeLists.txt
+++ b/catkin_ws/src/simulator/CMakeLists.txt
@@ -50,7 +50,7 @@ message(CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS})
    simulator_find_obj.srv
    simulator_manipulator.srv
    auto_charge.srv
-   return_home.srv
+   line_follower.srv
  )
 
 ## Generate added messages and services with any dependencies listed here
@@ -131,9 +131,15 @@ add_executable(auto_charge_server src/motion_planner/auto_charge_server.cpp)
 target_link_libraries(auto_charge_server ${catkin_LIBRARIES})
 add_dependencies(auto_charge_server simulator_generate_messages_cpp)
 
-add_executable(return_home_server src/motion_planner/return_home_server.cpp)
-target_link_libraries(return_home_server ${catkin_LIBRARIES})
-add_dependencies(return_home_server simulator_generate_messages_cpp)
-
 add_executable(joy_teleop_node src/joy_teleop/joy_teleop_node.cpp)
 target_link_libraries(joy_teleop_node ${catkin_LIBRARIES})
+
+add_executable(follow_line_server src/motion_planner/follow_line_server.cpp)
+target_link_libraries(follow_line_server ${catkin_LIBRARIES})
+add_dependencies(follow_line_server simulator_generate_messages_cpp)
+
+add_executable(follow_line_client src/motion_planner/follow_line_client.cpp)
+target_link_libraries(follow_line_client ${catkin_LIBRARIES})
+add_dependencies(follow_line_client simulator_generate_messages_cpp)
+
+
